--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <tr>
       <TD>     
         <br>      
-    <center><img src="img/wcupa.png alt="w02-wcu-logo" width = "300" height = "90"></center> 
+    <center><img src="img/wcupa.png" alt="w02-wcu-logo"  width = "300"  height = "150"></center> 
     <center><h2><font color="darkblue"> Josie Gallop </font></h2> 
         
       <!-- contact information  -->
